feat: hearing adjournment and re-listing (FPLA-1916) (#1760)