@@ -5,24 +5,25 @@ import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.ActiveProfiles;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.HearingBooking;
 import uk.gov.hmcts.reform.fpl.model.Judge;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.hmcts.reform.fpl.model.common.JudgeAndLegalAdvisor;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicList;
-import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
+import uk.gov.hmcts.reform.fpl.utils.ElementUtils;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
-import static java.lang.Long.parseLong;
+import static java.util.UUID.randomUUID;
+import static org.apache.commons.lang3.RandomUtils.nextLong;
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.hmcts.reform.fpl.enums.HearingType.CASE_MANAGEMENT;
 import static uk.gov.hmcts.reform.fpl.enums.JudgeOrMagistrateTitle.HIS_HONOUR_JUDGE;
+import static uk.gov.hmcts.reform.fpl.enums.YesNo.YES;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 
 @ActiveProfiles("integration-test")
@@ -30,87 +31,79 @@ import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 @OverrideAutoConfiguration(enabled = true)
 class ManageHearingsControllerAboutToStartTest extends AbstractControllerTest {
 
-    private static final String CASE_ID = "12345";
-
     ManageHearingsControllerAboutToStartTest() {
         super("manage-hearings");
     }
 
     @Test
     void shouldSetFirstHearingFlagWhenHearingsEmpty() {
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(parseLong(CASE_ID))
-            .data(Map.of("data", "some data"))
+
+        CaseData initialCaseData = CaseData.builder()
+            .id(nextLong())
+            .selectedHearingId(randomUUID())
             .build();
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
-        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
+        CaseData updatedCaseData = extractCaseData(postAboutToStartEvent(initialCaseData));
 
-        assertThat(caseData.getFirstHearingFlag()).isEqualTo("Yes");
-        assertThat(caseData.getHasExistingHearings()).isNull();
+        assertThat(updatedCaseData.getFirstHearingFlag()).isEqualTo(YES.getValue());
+        assertThat(updatedCaseData.getHasExistingHearings()).isNull();
+        assertThat(updatedCaseData.getSelectedHearingId()).isNull();
     }
 
     @Test
     void shouldSetJudgeWhenAllocatedJudgePresent() {
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(parseLong(CASE_ID))
-            .data(Map.of("allocatedJudge", Judge.builder()
+
+        CaseData initialCaseData = CaseData.builder()
+            .id(nextLong())
+            .allocatedJudge(Judge.builder()
                 .judgeTitle(HIS_HONOUR_JUDGE)
                 .judgeLastName("Richards")
                 .judgeEmailAddress("richards@example.com")
-                .build()))
+                .build())
             .build();
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
-        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
+        CaseData updatedCaseData = extractCaseData(postAboutToStartEvent(initialCaseData));
 
-        assertThat(caseData.getJudgeAndLegalAdvisor()).isEqualTo(JudgeAndLegalAdvisor.builder()
+        assertThat(updatedCaseData.getJudgeAndLegalAdvisor()).isEqualTo(JudgeAndLegalAdvisor.builder()
             .allocatedJudgeLabel("Case assigned to: His Honour Judge Richards").build());
     }
 
     @Test
-    void shouldSetHearingDateListOfFutureHearingsAndExistingHearingsFlagWhenHearingsPresent() {
-        List<Element<HearingBooking>> hearings = hearings();
+    void shouldSetHearingDynamicLists() {
+        Element<HearingBooking> futureHearing1 = hearingFromToday(3);
+        Element<HearingBooking> futureHearing2 = hearingFromToday(2);
+        Element<HearingBooking> todayHearing = hearingFromToday(0);
+        Element<HearingBooking> pastHearing1 = hearingFromToday(-2);
+        Element<HearingBooking> pastHearing2 = hearingFromToday(-3);
 
-        CaseDetails caseDetails = CaseDetails.builder()
-            .id(parseLong(CASE_ID))
-            .data(Map.of("hearingDetails", hearings))
+        CaseData initialCaseData = CaseData.builder()
+            .id(nextLong())
+            .hearingDetails(List.of(futureHearing1, futureHearing2, todayHearing, pastHearing1, pastHearing2))
             .build();
 
-        DynamicList dynamicList = dynamicList(hearings);
+        CaseData updatedCaseData = extractCaseData(postAboutToStartEvent(initialCaseData));
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
-        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
-
-        assertThat(caseData.getFirstHearingFlag()).isNull();
-        assertThat(caseData.getHearingDateList()).isEqualTo(
-            mapper.convertValue(dynamicList, new TypeReference<Map<String, Object>>() {}));
-        assertThat(caseData.getHasExistingHearings()).isEqualTo("Yes");
+        assertThat(updatedCaseData.getFirstHearingFlag()).isEqualTo("No");
+        assertThat(updatedCaseData.getHasExistingHearings()).isEqualTo("Yes");
+        assertThat(updatedCaseData.getHearingDateList())
+            .isEqualTo(dynamicList(futureHearing1, futureHearing2));
+        assertThat(updatedCaseData.getPastAndTodayHearingDateList())
+            .isEqualTo(dynamicList(todayHearing, pastHearing1, pastHearing2));
     }
 
-    private DynamicList dynamicList(List<Element<HearingBooking>> hearings) {
-        return DynamicList.builder()
-            .value(DynamicListElement.builder().build())
-            .listItems(List.of(
-                DynamicListElement.builder()
-                    .code(hearings.get(0).getId())
-                    .label("Case management hearing, 15 March 2099")
-                    .build()
-            ))
-            .build();
+    @SafeVarargs
+    private Object dynamicList(Element<HearingBooking>... hearings) {
+        DynamicList dynamicList = ElementUtils.asDynamicList(Arrays.asList(hearings), HearingBooking::toLabel);
+        return mapper.convertValue(dynamicList, new TypeReference<Map<String, Object>>() {
+        });
     }
 
-    private List<Element<HearingBooking>> hearings() {
-        return List.of(
-            element(hearing(LocalDateTime.of(2099, 3, 15, 20, 20))),
-            element(hearing(LocalDateTime.of(2020, 1, 1, 10, 10)))
-        );
-    }
-
-    private HearingBooking hearing(LocalDateTime startDate) {
-        return HearingBooking.builder()
+    private static Element<HearingBooking> hearingFromToday(int daysFromToday) {
+        final LocalDateTime startTime = LocalDateTime.now().plusDays(daysFromToday);
+        return element(HearingBooking.builder()
             .type(CASE_MANAGEMENT)
-            .startDate(startDate)
-            .build();
+            .startDate(startTime)
+            .endDate(startTime.plusDays(1))
+            .build());
     }
 }
